# Ragebot-MCP

./: .env.example  .gitignore  MANIFEST.in  RAGEBOT_IMPLEMENTATION_GUIDE.md  README.md  all_requirements.txt  deploy.md  models_gemini.py  pyproject.toml  requirements-full.txt  requirements.txt  setup.py
ragebot/: __init__.py  __main__.py  cli.py
ragebot/agents/: context_builder.py
ragebot/auth/: provider_auth.py
ragebot/core/: commands.py  config.py  engine.py  scanner.py  watcher.py
ragebot/llm/: __init__.py  base.py  factory.py  gemini.py  grok.py  groq.py  noop.py  ollama.py  provider_manager.py
ragebot/mcp/: __init__.py  __main__.py  server.py
ragebot/parsers/: code_parser.py  doc_parser.py
ragebot/search/: embedder.py  retriever.py
ragebot/storage/: db.py  session_manager.py  snapshot.py
ragebot/utils/: config_display.py  display.py  error_handler.py  logging_config.py  search_formatter.py  status_bar.py  tokens.py  ui_helpers.py
tests/: test_ragebot.py  tests.py
