[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "ragebot-mcp"
version     = "1.0.0"
description = "Intelligent CLI-based Project Context Engine with MCP server support"
readme      = "README.md"
requires-python = ">=3.10"
license     = { text = "MIT" }
authors     = [{ name = "RageBot Team" }]
keywords    = ["cli", "ai", "mcp", "gemini", "grok", "developer-tools", "code-context"]

# ── CLI entry points ──────────────────────────────────────────────────────────
[project.scripts]
ragebot             = "ragebot.cli:main_interactive"
rage                = "ragebot.cli:main"
ragebot-mcp-server  = "ragebot.mcp.server:main"

[project.entry-points."mcp.servers"]
ragebot = "ragebot.mcp.server:main"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["."]
include = ["ragebot*"]

# ── Tool config ───────────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
