[build-system]
requires = ["setuptools>=61", "wheel", "tomli>=1.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragebot-mcp"
version = "1.0.2"

description = "Intelligent CLI-based Project Context Engine with MCP server support"
readme = "README.md"
requires-python = ">=3.10"

# Modern license format
license = { text = "MIT" }

authors = [
    { name = "Atharv Rahate", email = "atharvdrahate@gmail.com" },
    { name = "Krushnansh Meher", email = "krushnansh22@gmail.com" },
    { name = "Rohan Kokatare", email = "kokatarerohan@gmail.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]

keywords = [
    "cli",
    "ai",
    "mcp"
    "developer-tools",
    "code-context",
    "llm",
    "rag"
]

# Keep only essential runtime dependencies
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "typer>=0.12",
    "questionary>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "PyYAML>=6.0",
    "openai>=1.0",
    "google-generativeai>=0.8",
    "sentence-transformers>=2.7",
    "faiss-cpu>=1.7",
    "numpy>=1.26",
    "tiktoken>=0.7",
    "watchdog>=4.0",
]

[project.optional-dependencies]
ai = [
    "torch",
    "transformers",
    "sentence-transformers"
]

[project.urls]
Repository = "https://github.com/atharvrahate296/Ragebot-MCP"

# CLI entry points
[project.scripts]
ragebot = "ragebot.cli:main_interactive"
rage = "ragebot.cli:main"
ragebot-mcp-server = "ragebot.mcp.server:main"

# MCP server registration
[project.entry-points."mcp.servers"]
ragebot = "ragebot.mcp.server:main"

# Package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["ragebot*"]

# Black
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# Ruff
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# MyPy
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]